# fetchfm

./: .gitignore  LICENSE  README.md  fetchfm.py  justfile  pyproject.toml
src/: __init__.py  cli.py  config.py  db.py  download.py  lastfm.py  playlist.py  tui.py  utils.py
