[project]
name = "fetchfm"
version = "0.1.0"
description = "Download top tracks for any artist with fuzzy duplicate detection, interactive TUI, and audio preview"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Felipe Scarel", email = "fbscarel@gmail.com" }
]
license = { text = "MIT" }
keywords = ["music", "download", "lastfm", "youtube", "spotify", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[project.scripts]
fetchfm = "src.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
